kubernetes/parked/gitlab/httproute.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gitlab-vm
  namespace: gitlab-runner
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: gitlab-vm
  namespace: gitlab-runner
  labels:
    kubernetes.io/service-name: gitlab-vm
addressType: IPv4
endpoints:
  - addresses:
      - "192.168.0.200"
    conditions:
      ready: true
ports:
  - port: 80
    protocol: TCP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab
  namespace: gitlab-runner
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "gitlab.timourhomelab.org"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: gitlab-vm
          port: 80
